<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tetris Lite</string>

    <string name="start_game">Start Game</string>
    <string name="about">About</string>
    <string name="high_score">High Score</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>

    <string name="copyright_message_footer">Copyright \u00A9 Tetris Lite 2018. All rights reserved.</string>
    <string name="copyright_message">Copyright \u00A9 Tetris Lite 2018. All rights reserved.\n\nDeveloper: Gokul Nath KP</string>
    <string name="share_message">Hey, check out Tetris Lite, an awesome tetris game! Here is link to download </string>

    <string name="score">Score:</string>
    <string name="level">Level:</string>

    <string name="game_over_message">Game over. You\'ve scored %1$d and reached level %2$d.</string>
    <string name="play_again">Play Again</string>
    <string name="game_over">Game Over</string>
    <string name="about_us">About Us</string>
    <string name="dismiss">Dismiss</string>

</resources>